# repo-discovery-onboarding

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.claude/commands/: README.md  discovery.md  onboarding.md  repo-onboarding.md
examples/: run-against-local-repo.sh
reports/Dietozaur/: discovery.md  onboarding_backend.md  onboarding_ceo.md  onboarding_frontend.md
src/repo_onboarding/: __init__.py  __main__.py  cli.py  render.py  scanner.py
tests/: test_scanner.py
