[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-discovery-onboarding"
version = "0.1.0"
description = "Small CLI for generating repository discovery and developer onboarding docs from a local repo path."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Krzysztof Pilat" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
repo-onboarding = "repo_onboarding.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
