[metadata]
name = repo-discovery-onboarding
version = 0.1.0
description = Small CLI for generating repository discovery and developer onboarding docs from a local repo path.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8

[options.entry_points]
console_scripts =
    repo-onboarding = repo_onboarding.cli:main
